# rust-os

./: .prettierrc.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
src/vga_buffer/: macros.rs  mod.rs  writer.rs
tests/: basic_boot.rs  should_panic.rs
