[package]
name = "rust-os"
version = "0.1.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33             # (0x10 << 1) | 1 = 33
test-timeout = 180                      # 180 seconds (3 minutes)

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
uart_16550 = "0.2.10"
volatile = "0.2.6"
x86_64 = "0.12.3"
